--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18"
   },
+
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
