--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI="mongodb+srv://Shivamkuma:mongo@shivam.sdorocx.mongodb.net/"
 PORT=3000
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET='MISSION18YEARSOLD'
