updating for onrender

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb+srv://Shivamkuma:mongo@shivam.sdorocx.mongodb.net/"
+MONGODB_URI=mongodb+srv://Shivamkuma:mongo@shivam.sdorocx.mongodb.net/
 PORT=3000
-JWT_SECRET='MISSION18YEARSOLD'
+JWT_SECRET=MISSION18YEARSOLD
