--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "appwrite": "^15.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "nodemon": "^3.1.3"
   },
   "scripts": {
     "start": "cd backend && nodemon server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "render-build":"npm install && npm run build"
+
   },
   "name": "e-commerce",
   "version": "1.0.0",
