--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nodemon": "^3.1.3"
   },
   "scripts": {
+    "build": "cd my-app && npm run build",
     "start": "cd backend && nodemon server.js",
     "lint": "next lint",
     "render-build":"npm install && npm run build"
