--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "cd my-app && npm run build",
     "start": "cd backend && nodemon server.js",
     "lint": "next lint",
-    "render-build":"npm install && npm run build"
+    "render-build":"npm install && cd my-app && npm run build"
 
   },
   "name": "e-commerce",
