--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "scripts": {
     "build": "cd my-app && npm run build",
-    "start": "cd backend && nodemon server.js",
     "lint": "next lint",
-    "render-build":"npm install && cd my-app && npm run build"
-
+    "render-build":"npm install && cd my-app && npm run build",
+    "start": "node server/server.js",
+"develop": "concurrently \"cd backend && npm run start\" \"cd my-app && npm run start\"",
+"install": "cd backend && npm i && cd ../backend && npm i --production=false",
+"render-build":"npm install && npm run build"
   },
   "name": "e-commerce",
   "version": "1.0.0",
