--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run  build",
     "start": "next start",
     "lint": "next lint"
   },
